src/objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit cards (Account)</relationshipLabel>
        <relationshipName>Credit_cards1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank account</label>
        <referenceTo>Bank_account__c</referenceTo>
        <relationshipLabel>Credit cards</relationshipLabel>
        <relationshipName>Credit_cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>